--- a/institute-app/institute-frontend/src/App.css
+++ b/institute-app/institute-frontend/src/App.css
@@ -54,3 +54,13 @@
   font-family: 'Cinzel', serif;
 
 }
+
+.material-symbols-outlined {
+  font-size: 40px;
+  font-weight: 500;
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 700,
+  'GRAD' 0,
+  'opsz' 40,
+}
